# BGU_Projects

Bash/: wordFinder.sh
C++/hw_assignment4/: 1.in  1.out  2.out  CMakeLists.txt  CNFTST.txt  Entity.cpp  Entity.h  FIRST.txt  Game.cpp  Game.h  MyResult.txt  ReadMe.txt  Room.cpp  Room.h  a.out  fuck MEEEE  main.cpp  makefile  tests.cpp
C++/hw_assignment5/: 1.out  2.out  3.out  4.out  CMakeLists.txt  Dragon.cpp  Dragon.h  Entity.cpp  Entity.h  Fighter.cpp  Fighter.h  Game.cpp  Game.h  GameException.h  Goblin.cpp  Goblin.h  Monster.cpp  Monster.h  MyResult.txt  Player.cpp  Player.h  Room.cpp  Room.h  Sorcerer.cpp  Sorcerer.h  config_file.txt  main.cpp  makefile
C/hw_assignement2/: CMakeLists.txt  Defs.h  FullRun_exampleToCompare (1).txt  Jerry.c  Jerry.h  Lior  empty_try.txt  finaltry  fuck  main.c
C/hw_assignment3/: CMakeLists.txt  HashTable.c  HashTable.h  Jerry.c  Jerry.h  JerryBoreeMain.c  KeyValuePair.c  KeyValuePair.h  LinkedList.c  LinkedList.h  MultiValueHashTable.c  MultiValueHashTable.h  ReadMe.txt  main.c  makefile  myRESULTS.txt  test555.txt  testHELLO.txt  try  try2
Java/Year1_projects/: cr.txt  output.txt
Python/hw1/: new.py  new_ques2.py  question_1.py  question_2.py  question_3.py  question_4.py  tests (hw1).py
Python/hw2/: ido_tests.py  question1.py  question2.py  try.py
Python/hw3/: HW3 (1).py  hello.py  try.py
Python/hw4/: q1.py  q2.py  q3.py  q4.py  test_Molly.py
Python/hw5/: Animal.py  Animals_lists.py  Aquarium.py  Crab.py  Exceptions.py  Fish.py  (+7 more)
hw_assignement2/: ManageJerries.c  ReadMe.txt  backup  last  my_prog  notes  roii
(+264 files in other folders)
